--- a/userContent.css
+++ b/userContent.css
@@ -16,6 +16,11 @@
 @import url(./css/colors/base-dark.css);
 @import url(./css/colors/pagesContent-dark.css);
 
+/*
+@supports -moz-bool-pref("browser.in-content.dark-mode") {
+@media (prefers-color-scheme: dark) {
+*/
+
 /* Light */
 /*
 @import url(./css/colors/tags-light.css);
